add one-pager files

--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Chelsea DeGlopper</h1>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+		<meta charset="UTF-8" />
+        <title>Chelsea DeGlopper</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="description" content="Chelsea DeGlopper's portfolio" />
+        <meta name="keywords" content="librarian, library, higher education, instructional design, web design, web development, build websites, small business marketing, ruby, php, wordpress, javascript, jquery" />
+        <meta name="author" content="Chelsea DeGlopper" />
+        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="icon" type="image/png" href="cmd.ico">
+    </head>
+    <body>
+    	<section class="profile-box">
+			<div class="content">
+				<h1>Chelsea DeGlopper</h1>
+				<p><strong>Library background / Web Development foreground</strong></p>
+				<p><strong>New York, NY</strong></p>
+				<h3>Skills</h3>
+				<p>Web development. Web design. Graphic design. Organization of information. Social media marketing. WordPress. User Experience. Instructional design. Copywriting.</p>
+				<h3>Languages</h3>
+				<p>HTML5. CSS3. Javascript. JQuery. PHP. Ruby.</p>
+			
+				</div>
+			</div>
+		</section>
+	</body>
+</html>
