added github link

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 				<p>Web development. Web design. Graphic design. Organization of information. Social media marketing. WordPress. User Experience. Instructional design. Copywriting.</p>
 				<h3>Languages</h3>
 				<p>HTML5. CSS3. Javascript. JQuery. PHP. Ruby.</p>
+				<p id="github"><strong><a href="http://www.github.com/cdeglopper">see my github profile</a></strong></p>
 			
 				</div>
 			</div>
